# betterforces

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Justfile  README.md  docker-compose.yml
.github/workflows/: build.yml  react-doctor.yml
backend/: Justfile  config.py  pyproject.toml  pytest.ini  ty.toml
backend/api/: deps.py
backend/api/routes/: __init__.py  abandoned_problems.py  base.py  daily_activity.py  difficulty_distribution.py  tags.py  tasks.py
backend/api/schemas/: __init__.py  common.py  daily_activity.py
backend/domain/models/: __init__.py  base.py  daily_activity.py  time_period.py
backend/domain/services/: __init__.py  abandoned_problems_service.py  base.py  daily_activity_service.py  difficulty_distribution_service.py  tags_service.py
backend/infrastructure/: codeforces_client.py  redis_client.py  task_queue.py
backend/tests/unit/base_metric_service/: conftest.py  test_deduplicate_problems.py  test_filter_by_date_range.py  test_filter_successful_submissions.py
backend/tests/unit/daily_activity_service/: conftest.py  test_analysis.py
backend/tests/unit/time_period/: conftest.py  test_to_start_date.py
backend/worker/: Dockerfile  __init__.py  main.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
envs/: .env.ports.example
frontend/src/: App.tsx
sources/: __init__.py  config.py  main.py
sources/api/: app.py  deps.py  schemas.py
sources/domain/: models.py  repositories.py  services.py
sources/infrastructure/: codeforces_client.py  redis_client.py
sources/services/: __init__.py  (+1 more)
(+26 files in other folders)
