[project]
name = "betterforces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[redis]",
    "redis",
    "uvicorn[standard]",
    "pydantic-settings"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
